// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stories Snapshots Documentazione/Organizzare i contenuti/Liste di Immagini ElementoSingolo 1`] = `
<div>
  <div
    class="row"
  >
    <div
      class="col-12 col-lg-4"
    >
      <div
        class="it-grid-item-wrapper"
      >
        <a
          href="#"
        >
          <div
            class="img-responsive-wrapper"
          >
            <div
              class="img-responsive"
            >
              <div
                class="img-wrapper"
              >
                <img
                  alt="Alternative Text"
                  src="https://via.placeholder.com/660x300/ebebeb/808080/?text=Immagine"
                  title="Image Title"
                />
              </div>
            </div>
          </div>
        </a>
      </div>
    </div>
    <div
      class="col-12 col-lg-4"
    >
      <div
        class="it-grid-item-wrapper"
      >
        <a
          href="#"
        >
          <div
            class="img-responsive-wrapper"
          >
            <div
              class="img-responsive"
            >
              <div
                class="img-wrapper"
              >
                <img
                  alt="Alternative Text"
                  src="https://via.placeholder.com/660x300/ebebeb/808080/?text=Immagine"
                  title="Image Title"
                />
              </div>
            </div>
          </div>
          <span
            class="it-griditem-text-wrapper"
          >
            <span
              class="it-griditem-text"
            >
              Didascalia
            </span>
            <svg
              class="icon icon-sm"
              enable-background="new 0 0 24 24"
              role="img"
              viewBox="0 0 24 24"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                icon
              </title>
              <path
                d="m19 12-2.9 2.9-.7-.8 2.1-2.1-2.1-2.1.7-.8L19 12zM7.9 9.1 5 12l2.9 2.9.7-.8L6.5 12l2.1-2.1-.7-.8zM22 12c0 5.5-4.5 10-10 10S2 17.5 2 12 6.5 2 12 2s10 4.5 10 10zm-1 0c0-5-4-9-9-9s-9 4-9 9 4 9 9 9 9-4 9-9zM9.6 16.5l1 .3 3.7-9.3-.9-.3-3.8 9.3z"
              />
            </svg>
          </span>
        </a>
      </div>
    </div>
    <div
      class="col-12 col-lg-4"
    >
      <div
        class="it-grid-item-wrapper it-grid-item-overlay"
      >
        <a
          href="#"
        >
          <div
            class="img-responsive-wrapper"
          >
            <div
              class="img-responsive"
            >
              <div
                class="img-wrapper"
              >
                <img
                  alt="Alternative Text"
                  src="https://via.placeholder.com/660x300/ebebeb/808080/?text=Immagine"
                  title="Image Title"
                />
              </div>
            </div>
          </div>
          <span
            class="it-griditem-text-wrapper"
          >
            <span
              class="it-griditem-text"
            >
              Didascalia
            </span>
            <svg
              class="icon icon-sm"
              enable-background="new 0 0 24 24"
              role="img"
              viewBox="0 0 24 24"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                icon
              </title>
              <path
                d="m19 12-2.9 2.9-.7-.8 2.1-2.1-2.1-2.1.7-.8L19 12zM7.9 9.1 5 12l2.9 2.9.7-.8L6.5 12l2.1-2.1-.7-.8zM22 12c0 5.5-4.5 10-10 10S2 17.5 2 12 6.5 2 12 2s10 4.5 10 10zm-1 0c0-5-4-9-9-9s-9 4-9 9 4 9 9 9 9-4 9-9zM9.6 16.5l1 .3 3.7-9.3-.9-.3-3.8 9.3z"
              />
            </svg>
          </span>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Organizzare i contenuti/Liste di Immagini GrigliaStandard 1`] = `
<div>
  <div
    class="it-grid-list-wrapper"
  >
    <div
      class="grid-row"
    >
      <div
        class="col-6 col-lg-4"
      >
        <div
          class="it-grid-item-wrapper"
        >
          <a
            href="#"
          >
            <div
              class="img-responsive-wrapper"
            >
              <div
                class="img-responsive"
              >
                <div
                  class="img-wrapper"
                >
                  <img
                    alt="Alternative Text"
                    src="https://via.placeholder.com/660x300/ebebeb/808080/?text=Immagine"
                    title="Image Title"
                  />
                </div>
              </div>
            </div>
          </a>
        </div>
      </div>
      <div
        class="col-6 col-lg-4"
      >
        <div
          class="it-grid-item-wrapper"
        >
          <a
            href="#"
          >
            <div
              class="img-responsive-wrapper"
            >
              <div
                class="img-responsive"
              >
                <div
                  class="img-wrapper"
                >
                  <img
                    alt="Alternative Text"
                    src="https://via.placeholder.com/660x300/ebebeb/808080/?text=Immagine"
                    title="Image Title"
                  />
                </div>
              </div>
            </div>
          </a>
        </div>
      </div>
      <div
        class="col-6 col-lg-4"
      >
        <div
          class="it-grid-item-wrapper"
        >
          <a
            href="#"
          >
            <div
              class="img-responsive-wrapper"
            >
              <div
                class="img-responsive"
              >
                <div
                  class="img-wrapper"
                >
                  <img
                    alt="Alternative Text"
                    src="https://via.placeholder.com/660x300/ebebeb/808080/?text=Immagine"
                    title="Image Title"
                  />
                </div>
              </div>
            </div>
          </a>
        </div>
      </div>
      <div
        class="col-6 col-lg-4"
      >
        <div
          class="it-grid-item-wrapper"
        >
          <a
            href="#"
          >
            <div
              class="img-responsive-wrapper"
            >
              <div
                class="img-responsive"
              >
                <div
                  class="img-wrapper"
                >
                  <img
                    alt="Alternative Text"
                    src="https://via.placeholder.com/660x300/ebebeb/808080/?text=Immagine"
                    title="Image Title"
                  />
                </div>
              </div>
            </div>
          </a>
        </div>
      </div>
      <div
        class="col-6 col-lg-4"
      >
        <div
          class="it-grid-item-wrapper"
        >
          <a
            href="#"
          >
            <div
              class="img-responsive-wrapper"
            >
              <div
                class="img-responsive"
              >
                <div
                  class="img-wrapper"
                >
                  <img
                    alt="Alternative Text"
                    src="https://via.placeholder.com/660x300/ebebeb/808080/?text=Immagine"
                    title="Image Title"
                  />
                </div>
              </div>
            </div>
          </a>
        </div>
      </div>
      <div
        class="col-6 col-lg-4"
      >
        <div
          class="it-grid-item-wrapper"
        >
          <a
            href="#"
          >
            <div
              class="img-responsive-wrapper"
            >
              <div
                class="img-responsive"
              >
                <div
                  class="img-wrapper"
                >
                  <img
                    alt="Alternative Text"
                    src="https://via.placeholder.com/660x300/ebebeb/808080/?text=Immagine"
                    title="Image Title"
                  />
                </div>
              </div>
            </div>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Organizzare i contenuti/Liste di Immagini Masonry 1`] = `
<div>
  <div
    class="it-grid-list-wrapper it-image-label-grid it-masonry"
  >
    <div
      class="card-columns"
    >
      <div
        class="col-12"
      >
        <div
          class="it-grid-item-wrapper"
        >
          <a
            href="#"
          >
            <div
              class="img-responsive-wrapper"
            >
              <div
                class="img-responsive"
              >
                <div
                  class="img-wrapper"
                >
                  <img
                    alt="Alternative Text"
                    src="https://via.placeholder.com/400x300/ebebeb/808080/?text=Immagine"
                    title="Image Title"
                  />
                </div>
              </div>
            </div>
            <span
              class="it-griditem-text-wrapper"
            >
              <span
                class="it-griditem-text"
              >
                Didascalia
              </span>
              <svg
                class="icon icon-sm"
                enable-background="new 0 0 24 24"
                role="img"
                viewBox="0 0 24 24"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  icon
                </title>
                <path
                  d="m19 12-2.9 2.9-.7-.8 2.1-2.1-2.1-2.1.7-.8L19 12zM7.9 9.1 5 12l2.9 2.9.7-.8L6.5 12l2.1-2.1-.7-.8zM22 12c0 5.5-4.5 10-10 10S2 17.5 2 12 6.5 2 12 2s10 4.5 10 10zm-1 0c0-5-4-9-9-9s-9 4-9 9 4 9 9 9 9-4 9-9zM9.6 16.5l1 .3 3.7-9.3-.9-.3-3.8 9.3z"
                />
              </svg>
            </span>
          </a>
        </div>
      </div>
      <div
        class="col-12"
      >
        <div
          class="it-grid-item-wrapper"
        >
          <a
            href="#"
          >
            <div
              class="img-responsive-wrapper"
            >
              <div
                class="img-responsive"
              >
                <div
                  class="img-wrapper"
                >
                  <img
                    alt="Alternative Text"
                    src="https://via.placeholder.com/400x500/ebebeb/808080/?text=Immagine"
                    title="Image Title"
                  />
                </div>
              </div>
            </div>
            <span
              class="it-griditem-text-wrapper"
            >
              <span
                class="it-griditem-text"
              >
                Didascalia
              </span>
              <svg
                class="icon icon-sm"
                enable-background="new 0 0 24 24"
                role="img"
                viewBox="0 0 24 24"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  icon
                </title>
                <path
                  d="m19 12-2.9 2.9-.7-.8 2.1-2.1-2.1-2.1.7-.8L19 12zM7.9 9.1 5 12l2.9 2.9.7-.8L6.5 12l2.1-2.1-.7-.8zM22 12c0 5.5-4.5 10-10 10S2 17.5 2 12 6.5 2 12 2s10 4.5 10 10zm-1 0c0-5-4-9-9-9s-9 4-9 9 4 9 9 9 9-4 9-9zM9.6 16.5l1 .3 3.7-9.3-.9-.3-3.8 9.3z"
                />
              </svg>
            </span>
          </a>
        </div>
      </div>
      <div
        class="col-12"
      >
        <div
          class="it-grid-item-wrapper"
        >
          <a
            href="#"
          >
            <div
              class="img-responsive-wrapper"
            >
              <div
                class="img-responsive"
              >
                <div
                  class="img-wrapper"
                >
                  <img
                    alt="Alternative Text"
                    src="https://via.placeholder.com/400x700/ebebeb/808080/?text=Immagine"
                    title="Image Title"
                  />
                </div>
              </div>
            </div>
            <span
              class="it-griditem-text-wrapper"
            >
              <span
                class="it-griditem-text"
              >
                Didascalia
              </span>
              <svg
                class="icon icon-sm"
                enable-background="new 0 0 24 24"
                role="img"
                viewBox="0 0 24 24"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  icon
                </title>
                <path
                  d="m19 12-2.9 2.9-.7-.8 2.1-2.1-2.1-2.1.7-.8L19 12zM7.9 9.1 5 12l2.9 2.9.7-.8L6.5 12l2.1-2.1-.7-.8zM22 12c0 5.5-4.5 10-10 10S2 17.5 2 12 6.5 2 12 2s10 4.5 10 10zm-1 0c0-5-4-9-9-9s-9 4-9 9 4 9 9 9 9-4 9-9zM9.6 16.5l1 .3 3.7-9.3-.9-.3-3.8 9.3z"
                />
              </svg>
            </span>
          </a>
        </div>
      </div>
      <div
        class="col-12"
      >
        <div
          class="it-grid-item-wrapper"
        >
          <a
            href="#"
          >
            <div
              class="img-responsive-wrapper"
            >
              <div
                class="img-responsive"
              >
                <div
                  class="img-wrapper"
                >
                  <img
                    alt="Alternative Text"
                    src="https://via.placeholder.com/400x600/ebebeb/808080/?text=Immagine"
                    title="Image Title"
                  />
                </div>
              </div>
            </div>
            <span
              class="it-griditem-text-wrapper"
            >
              <span
                class="it-griditem-text"
              >
                Didascalia
              </span>
              <svg
                class="icon icon-sm"
                enable-background="new 0 0 24 24"
                role="img"
                viewBox="0 0 24 24"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  icon
                </title>
                <path
                  d="m19 12-2.9 2.9-.7-.8 2.1-2.1-2.1-2.1.7-.8L19 12zM7.9 9.1 5 12l2.9 2.9.7-.8L6.5 12l2.1-2.1-.7-.8zM22 12c0 5.5-4.5 10-10 10S2 17.5 2 12 6.5 2 12 2s10 4.5 10 10zm-1 0c0-5-4-9-9-9s-9 4-9 9 4 9 9 9 9-4 9-9zM9.6 16.5l1 .3 3.7-9.3-.9-.3-3.8 9.3z"
                />
              </svg>
            </span>
          </a>
        </div>
      </div>
      <div
        class="col-12"
      >
        <div
          class="it-grid-item-wrapper"
        >
          <a
            href="#"
          >
            <div
              class="img-responsive-wrapper"
            >
              <div
                class="img-responsive"
              >
                <div
                  class="img-wrapper"
                >
                  <img
                    alt="Alternative Text"
                    src="https://via.placeholder.com/400x500/ebebeb/808080/?text=Immagine"
                    title="Image Title"
                  />
                </div>
              </div>
            </div>
            <span
              class="it-griditem-text-wrapper"
            >
              <span
                class="it-griditem-text"
              >
                Didascalia
              </span>
              <svg
                class="icon icon-sm"
                enable-background="new 0 0 24 24"
                role="img"
                viewBox="0 0 24 24"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  icon
                </title>
                <path
                  d="m19 12-2.9 2.9-.7-.8 2.1-2.1-2.1-2.1.7-.8L19 12zM7.9 9.1 5 12l2.9 2.9.7-.8L6.5 12l2.1-2.1-.7-.8zM22 12c0 5.5-4.5 10-10 10S2 17.5 2 12 6.5 2 12 2s10 4.5 10 10zm-1 0c0-5-4-9-9-9s-9 4-9 9 4 9 9 9 9-4 9-9zM9.6 16.5l1 .3 3.7-9.3-.9-.3-3.8 9.3z"
                />
              </svg>
            </span>
          </a>
        </div>
      </div>
      <div
        class="col-12"
      >
        <div
          class="it-grid-item-wrapper"
        >
          <a
            href="#"
          >
            <div
              class="img-responsive-wrapper"
            >
              <div
                class="img-responsive"
              >
                <div
                  class="img-wrapper"
                >
                  <img
                    alt="Alternative Text"
                    src="https://via.placeholder.com/400x400/ebebeb/808080/?text=Immagine"
                    title="Image Title"
                  />
                </div>
              </div>
            </div>
            <span
              class="it-griditem-text-wrapper"
            >
              <span
                class="it-griditem-text"
              >
                Didascalia
              </span>
              <svg
                class="icon icon-sm"
                enable-background="new 0 0 24 24"
                role="img"
                viewBox="0 0 24 24"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  icon
                </title>
                <path
                  d="m19 12-2.9 2.9-.7-.8 2.1-2.1-2.1-2.1.7-.8L19 12zM7.9 9.1 5 12l2.9 2.9.7-.8L6.5 12l2.1-2.1-.7-.8zM22 12c0 5.5-4.5 10-10 10S2 17.5 2 12 6.5 2 12 2s10 4.5 10 10zm-1 0c0-5-4-9-9-9s-9 4-9 9 4 9 9 9 9-4 9-9zM9.6 16.5l1 .3 3.7-9.3-.9-.3-3.8 9.3z"
                />
              </svg>
            </span>
          </a>
        </div>
      </div>
      <div
        class="col-12"
      >
        <div
          class="it-grid-item-wrapper"
        >
          <a
            href="#"
          >
            <div
              class="img-responsive-wrapper"
            >
              <div
                class="img-responsive"
              >
                <div
                  class="img-wrapper"
                >
                  <img
                    alt="Alternative Text"
                    src="https://via.placeholder.com/400x600/ebebeb/808080/?text=Immagine"
                    title="Image Title"
                  />
                </div>
              </div>
            </div>
            <span
              class="it-griditem-text-wrapper"
            >
              <span
                class="it-griditem-text"
              >
                Didascalia
              </span>
              <svg
                class="icon icon-sm"
                enable-background="new 0 0 24 24"
                role="img"
                viewBox="0 0 24 24"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  icon
                </title>
                <path
                  d="m19 12-2.9 2.9-.7-.8 2.1-2.1-2.1-2.1.7-.8L19 12zM7.9 9.1 5 12l2.9 2.9.7-.8L6.5 12l2.1-2.1-.7-.8zM22 12c0 5.5-4.5 10-10 10S2 17.5 2 12 6.5 2 12 2s10 4.5 10 10zm-1 0c0-5-4-9-9-9s-9 4-9 9 4 9 9 9 9-4 9-9zM9.6 16.5l1 .3 3.7-9.3-.9-.3-3.8 9.3z"
                />
              </svg>
            </span>
          </a>
        </div>
      </div>
      <div
        class="col-12"
      >
        <div
          class="it-grid-item-wrapper"
        >
          <a
            href="#"
          >
            <div
              class="img-responsive-wrapper"
            >
              <div
                class="img-responsive"
              >
                <div
                  class="img-wrapper"
                >
                  <img
                    alt="Alternative Text"
                    src="https://via.placeholder.com/400x500/ebebeb/808080/?text=Immagine"
                    title="Image Title"
                  />
                </div>
              </div>
            </div>
            <span
              class="it-griditem-text-wrapper"
            >
              <span
                class="it-griditem-text"
              >
                Didascalia
              </span>
              <svg
                class="icon icon-sm"
                enable-background="new 0 0 24 24"
                role="img"
                viewBox="0 0 24 24"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  icon
                </title>
                <path
                  d="m19 12-2.9 2.9-.7-.8 2.1-2.1-2.1-2.1.7-.8L19 12zM7.9 9.1 5 12l2.9 2.9.7-.8L6.5 12l2.1-2.1-.7-.8zM22 12c0 5.5-4.5 10-10 10S2 17.5 2 12 6.5 2 12 2s10 4.5 10 10zm-1 0c0-5-4-9-9-9s-9 4-9 9 4 9 9 9 9-4 9-9zM9.6 16.5l1 .3 3.7-9.3-.9-.3-3.8 9.3z"
                />
              </svg>
            </span>
          </a>
        </div>
      </div>
      <div
        class="col-12"
      >
        <div
          class="it-grid-item-wrapper"
        >
          <a
            href="#"
          >
            <div
              class="img-responsive-wrapper"
            >
              <div
                class="img-responsive"
              >
                <div
                  class="img-wrapper"
                >
                  <img
                    alt="Alternative Text"
                    src="https://via.placeholder.com/400x400/ebebeb/808080/?text=Immagine"
                    title="Image Title"
                  />
                </div>
              </div>
            </div>
            <span
              class="it-griditem-text-wrapper"
            >
              <span
                class="it-griditem-text"
              >
                Didascalia
              </span>
              <svg
                class="icon icon-sm"
                enable-background="new 0 0 24 24"
                role="img"
                viewBox="0 0 24 24"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  icon
                </title>
                <path
                  d="m19 12-2.9 2.9-.7-.8 2.1-2.1-2.1-2.1.7-.8L19 12zM7.9 9.1 5 12l2.9 2.9.7-.8L6.5 12l2.1-2.1-.7-.8zM22 12c0 5.5-4.5 10-10 10S2 17.5 2 12 6.5 2 12 2s10 4.5 10 10zm-1 0c0-5-4-9-9-9s-9 4-9 9 4 9 9 9 9-4 9-9zM9.6 16.5l1 .3 3.7-9.3-.9-.3-3.8 9.3z"
                />
              </svg>
            </span>
          </a>
        </div>
      </div>
      <div
        class="col-12"
      >
        <div
          class="it-grid-item-wrapper"
        >
          <a
            href="#"
          >
            <div
              class="img-responsive-wrapper"
            >
              <div
                class="img-responsive"
              >
                <div
                  class="img-wrapper"
                >
                  <img
                    alt="Alternative Text"
                    src="https://via.placeholder.com/400x600/ebebeb/808080/?text=Immagine"
                    title="Image Title"
                  />
                </div>
              </div>
            </div>
            <span
              class="it-griditem-text-wrapper"
            >
              <span
                class="it-griditem-text"
              >
                Didascalia
              </span>
              <svg
                class="icon icon-sm"
                enable-background="new 0 0 24 24"
                role="img"
                viewBox="0 0 24 24"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  icon
                </title>
                <path
                  d="m19 12-2.9 2.9-.7-.8 2.1-2.1-2.1-2.1.7-.8L19 12zM7.9 9.1 5 12l2.9 2.9.7-.8L6.5 12l2.1-2.1-.7-.8zM22 12c0 5.5-4.5 10-10 10S2 17.5 2 12 6.5 2 12 2s10 4.5 10 10zm-1 0c0-5-4-9-9-9s-9 4-9 9 4 9 9 9 9-4 9-9zM9.6 16.5l1 .3 3.7-9.3-.9-.3-3.8 9.3z"
                />
              </svg>
            </span>
          </a>
        </div>
      </div>
      <div
        class="col-12"
      >
        <div
          class="it-grid-item-wrapper"
        >
          <a
            href="#"
          >
            <div
              class="img-responsive-wrapper"
            >
              <div
                class="img-responsive"
              >
                <div
                  class="img-wrapper"
                >
                  <img
                    alt="Alternative Text"
                    src="https://via.placeholder.com/400x500/ebebeb/808080/?text=Immagine"
                    title="Image Title"
                  />
                </div>
              </div>
            </div>
            <span
              class="it-griditem-text-wrapper"
            >
              <span
                class="it-griditem-text"
              >
                Didascalia
              </span>
              <svg
                class="icon icon-sm"
                enable-background="new 0 0 24 24"
                role="img"
                viewBox="0 0 24 24"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  icon
                </title>
                <path
                  d="m19 12-2.9 2.9-.7-.8 2.1-2.1-2.1-2.1.7-.8L19 12zM7.9 9.1 5 12l2.9 2.9.7-.8L6.5 12l2.1-2.1-.7-.8zM22 12c0 5.5-4.5 10-10 10S2 17.5 2 12 6.5 2 12 2s10 4.5 10 10zm-1 0c0-5-4-9-9-9s-9 4-9 9 4 9 9 9 9-4 9-9zM9.6 16.5l1 .3 3.7-9.3-.9-.3-3.8 9.3z"
                />
              </svg>
            </span>
          </a>
        </div>
      </div>
      <div
        class="col-12"
      >
        <div
          class="it-grid-item-wrapper"
        >
          <a
            href="#"
          >
            <div
              class="img-responsive-wrapper"
            >
              <div
                class="img-responsive"
              >
                <div
                  class="img-wrapper"
                >
                  <img
                    alt="Alternative Text"
                    src="https://via.placeholder.com/400x400/ebebeb/808080/?text=Immagine"
                    title="Image Title"
                  />
                </div>
              </div>
            </div>
            <span
              class="it-griditem-text-wrapper"
            >
              <span
                class="it-griditem-text"
              >
                Didascalia
              </span>
              <svg
                class="icon icon-sm"
                enable-background="new 0 0 24 24"
                role="img"
                viewBox="0 0 24 24"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  icon
                </title>
                <path
                  d="m19 12-2.9 2.9-.7-.8 2.1-2.1-2.1-2.1.7-.8L19 12zM7.9 9.1 5 12l2.9 2.9.7-.8L6.5 12l2.1-2.1-.7-.8zM22 12c0 5.5-4.5 10-10 10S2 17.5 2 12 6.5 2 12 2s10 4.5 10 10zm-1 0c0-5-4-9-9-9s-9 4-9 9 4 9 9 9 9-4 9-9zM9.6 16.5l1 .3 3.7-9.3-.9-.3-3.8 9.3z"
                />
              </svg>
            </span>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Organizzare i contenuti/Liste di Immagini Proporzionale 1`] = `
<div>
  <div
    class="it-grid-list-wrapper it-quilted-grid"
  >
    <div
      class="grid-row"
    >
      <div
        class="col-12 col-md-6"
      >
        <div
          class="it-grid-item-wrapper it-grid-item-overlay"
        >
          <a
            class=""
            href="#"
          >
            <div
              class="img-responsive-wrapper"
            >
              <div
                class="img-responsive"
              >
                <div
                  class="img-wrapper"
                >
                  <img
                    alt="Alternative Text"
                    src="https://via.placeholder.com/660x300/ebebeb/808080/?text=Immagine"
                    title="Image Title"
                  />
                </div>
              </div>
            </div>
            <span
              class="it-griditem-text-wrapper"
            >
              <span
                class="it-griditem-text"
              >
                Didascalia
              </span>
              <svg
                class="icon icon-sm"
                enable-background="new 0 0 24 24"
                role="img"
                viewBox="0 0 24 24"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  icon
                </title>
                <path
                  d="m19 12-2.9 2.9-.7-.8 2.1-2.1-2.1-2.1.7-.8L19 12zM7.9 9.1 5 12l2.9 2.9.7-.8L6.5 12l2.1-2.1-.7-.8zM22 12c0 5.5-4.5 10-10 10S2 17.5 2 12 6.5 2 12 2s10 4.5 10 10zm-1 0c0-5-4-9-9-9s-9 4-9 9 4 9 9 9 9-4 9-9zM9.6 16.5l1 .3 3.7-9.3-.9-.3-3.8 9.3z"
                />
              </svg>
            </span>
          </a>
        </div>
      </div>
      <div
        class="col-12 col-md-6"
      >
        <div
          class="grid-row"
        >
          <div
            class="col-6"
          >
            <div
              class="it-grid-item-wrapper it-grid-item-overlay"
            >
              <a
                href="#"
              >
                <div
                  class="img-responsive-wrapper"
                >
                  <div
                    class="img-responsive"
                  >
                    <div
                      class="img-wrapper"
                    >
                      <img
                        alt="Alternative Text"
                        src="https://via.placeholder.com/660x300/ebebeb/808080/?text=Immagine"
                        title="Image Title"
                      />
                    </div>
                  </div>
                </div>
                <span
                  class="it-griditem-text-wrapper"
                >
                  <span
                    class="it-griditem-text"
                  >
                    Didascalia
                  </span>
                  <svg
                    class="icon icon-sm"
                    enable-background="new 0 0 24 24"
                    role="img"
                    viewBox="0 0 24 24"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <title>
                      icon
                    </title>
                    <path
                      d="m19 12-2.9 2.9-.7-.8 2.1-2.1-2.1-2.1.7-.8L19 12zM7.9 9.1 5 12l2.9 2.9.7-.8L6.5 12l2.1-2.1-.7-.8zM22 12c0 5.5-4.5 10-10 10S2 17.5 2 12 6.5 2 12 2s10 4.5 10 10zm-1 0c0-5-4-9-9-9s-9 4-9 9 4 9 9 9 9-4 9-9zM9.6 16.5l1 .3 3.7-9.3-.9-.3-3.8 9.3z"
                    />
                  </svg>
                </span>
              </a>
            </div>
          </div>
          <div
            class="col-6"
          >
            <div
              class="it-grid-item-wrapper it-grid-item-overlay"
            >
              <a
                href="#"
              >
                <div
                  class="img-responsive-wrapper"
                >
                  <div
                    class="img-responsive"
                  >
                    <div
                      class="img-wrapper"
                    >
                      <img
                        alt="Alternative Text"
                        src="https://via.placeholder.com/660x300/ebebeb/808080/?text=Immagine"
                        title="Image Title"
                      />
                    </div>
                  </div>
                </div>
                <span
                  class="it-griditem-text-wrapper"
                >
                  <span
                    class="it-griditem-text"
                  >
                    Didascalia
                  </span>
                  <svg
                    class="icon icon-sm"
                    enable-background="new 0 0 24 24"
                    role="img"
                    viewBox="0 0 24 24"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <title>
                      icon
                    </title>
                    <path
                      d="m19 12-2.9 2.9-.7-.8 2.1-2.1-2.1-2.1.7-.8L19 12zM7.9 9.1 5 12l2.9 2.9.7-.8L6.5 12l2.1-2.1-.7-.8zM22 12c0 5.5-4.5 10-10 10S2 17.5 2 12 6.5 2 12 2s10 4.5 10 10zm-1 0c0-5-4-9-9-9s-9 4-9 9 4 9 9 9 9-4 9-9zM9.6 16.5l1 .3 3.7-9.3-.9-.3-3.8 9.3z"
                    />
                  </svg>
                </span>
              </a>
            </div>
          </div>
          <div
            class="col-12"
          >
            <div
              class="it-grid-item-wrapper it-grid-item-overlay it-grid-item-double-w"
            >
              <a
                href="#"
              >
                <div
                  class="img-responsive-wrapper"
                >
                  <div
                    class="img-responsive"
                  >
                    <div
                      class="img-wrapper"
                    >
                      <img
                        alt="Alternative Text"
                        src="https://via.placeholder.com/660x300/ebebeb/808080/?text=Immagine"
                        title="Image Title"
                      />
                    </div>
                  </div>
                </div>
                <span
                  class="it-griditem-text-wrapper"
                >
                  <span
                    class="it-griditem-text"
                  >
                    Didascalia
                  </span>
                  <svg
                    class="icon icon-sm"
                    enable-background="new 0 0 24 24"
                    role="img"
                    viewBox="0 0 24 24"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <title>
                      icon
                    </title>
                    <path
                      d="m19 12-2.9 2.9-.7-.8 2.1-2.1-2.1-2.1.7-.8L19 12zM7.9 9.1 5 12l2.9 2.9.7-.8L6.5 12l2.1-2.1-.7-.8zM22 12c0 5.5-4.5 10-10 10S2 17.5 2 12 6.5 2 12 2s10 4.5 10 10zm-1 0c0-5-4-9-9-9s-9 4-9 9 4 9 9 9 9-4 9-9zM9.6 16.5l1 .3 3.7-9.3-.9-.3-3.8 9.3z"
                    />
                  </svg>
                </span>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Organizzare i contenuti/Liste di Immagini StandardDidascalie 1`] = `
<div>
  <div
    class="it-grid-list-wrapper it-image-label-grid"
  >
    <div
      class="grid-row"
    >
      <div
        class="col-6 col-lg-4"
      >
        <div
          class="it-grid-item-wrapper"
        >
          <a
            href="#"
          >
            <div
              class="img-responsive-wrapper"
            >
              <div
                class="img-responsive"
              >
                <div
                  class="img-wrapper"
                >
                  <img
                    alt="Alternative Text"
                    src="https://via.placeholder.com/660x300/ebebeb/808080/?text=Immagine"
                    title="Image Title"
                  />
                </div>
              </div>
            </div>
            <span
              class="it-griditem-text-wrapper"
            >
              <span
                class="it-griditem-text"
              >
                Didascalia
              </span>
              <svg
                class="icon icon-sm"
                enable-background="new 0 0 24 24"
                role="img"
                viewBox="0 0 24 24"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  icon
                </title>
                <path
                  d="m19 12-2.9 2.9-.7-.8 2.1-2.1-2.1-2.1.7-.8L19 12zM7.9 9.1 5 12l2.9 2.9.7-.8L6.5 12l2.1-2.1-.7-.8zM22 12c0 5.5-4.5 10-10 10S2 17.5 2 12 6.5 2 12 2s10 4.5 10 10zm-1 0c0-5-4-9-9-9s-9 4-9 9 4 9 9 9 9-4 9-9zM9.6 16.5l1 .3 3.7-9.3-.9-.3-3.8 9.3z"
                />
              </svg>
            </span>
          </a>
        </div>
      </div>
      <div
        class="col-6 col-lg-4"
      >
        <div
          class="it-grid-item-wrapper"
        >
          <a
            href="#"
          >
            <div
              class="img-responsive-wrapper"
            >
              <div
                class="img-responsive"
              >
                <div
                  class="img-wrapper"
                >
                  <img
                    alt="Alternative Text"
                    src="https://via.placeholder.com/660x300/ebebeb/808080/?text=Immagine"
                    title="Image Title"
                  />
                </div>
              </div>
            </div>
            <span
              class="it-griditem-text-wrapper"
            >
              <span
                class="it-griditem-text"
              >
                Didascalia
              </span>
              <svg
                class="icon icon-sm"
                enable-background="new 0 0 24 24"
                role="img"
                viewBox="0 0 24 24"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  icon
                </title>
                <path
                  d="m19 12-2.9 2.9-.7-.8 2.1-2.1-2.1-2.1.7-.8L19 12zM7.9 9.1 5 12l2.9 2.9.7-.8L6.5 12l2.1-2.1-.7-.8zM22 12c0 5.5-4.5 10-10 10S2 17.5 2 12 6.5 2 12 2s10 4.5 10 10zm-1 0c0-5-4-9-9-9s-9 4-9 9 4 9 9 9 9-4 9-9zM9.6 16.5l1 .3 3.7-9.3-.9-.3-3.8 9.3z"
                />
              </svg>
            </span>
          </a>
        </div>
      </div>
      <div
        class="col-6 col-lg-4"
      >
        <div
          class="it-grid-item-wrapper"
        >
          <a
            href="#"
          >
            <div
              class="img-responsive-wrapper"
            >
              <div
                class="img-responsive"
              >
                <div
                  class="img-wrapper"
                >
                  <img
                    alt="Alternative Text"
                    src="https://via.placeholder.com/660x300/ebebeb/808080/?text=Immagine"
                    title="Image Title"
                  />
                </div>
              </div>
            </div>
            <span
              class="it-griditem-text-wrapper"
            >
              <span
                class="it-griditem-text"
              >
                Didascalia
              </span>
              <svg
                class="icon icon-sm"
                enable-background="new 0 0 24 24"
                role="img"
                viewBox="0 0 24 24"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  icon
                </title>
                <path
                  d="m19 12-2.9 2.9-.7-.8 2.1-2.1-2.1-2.1.7-.8L19 12zM7.9 9.1 5 12l2.9 2.9.7-.8L6.5 12l2.1-2.1-.7-.8zM22 12c0 5.5-4.5 10-10 10S2 17.5 2 12 6.5 2 12 2s10 4.5 10 10zm-1 0c0-5-4-9-9-9s-9 4-9 9 4 9 9 9 9-4 9-9zM9.6 16.5l1 .3 3.7-9.3-.9-.3-3.8 9.3z"
                />
              </svg>
            </span>
          </a>
        </div>
      </div>
      <div
        class="col-6 col-lg-4"
      >
        <div
          class="it-grid-item-wrapper"
        >
          <a
            href="#"
          >
            <div
              class="img-responsive-wrapper"
            >
              <div
                class="img-responsive"
              >
                <div
                  class="img-wrapper"
                >
                  <img
                    alt="Alternative Text"
                    src="https://via.placeholder.com/660x300/ebebeb/808080/?text=Immagine"
                    title="Image Title"
                  />
                </div>
              </div>
            </div>
            <span
              class="it-griditem-text-wrapper"
            >
              <span
                class="it-griditem-text"
              >
                Didascalia
              </span>
              <svg
                class="icon icon-sm"
                enable-background="new 0 0 24 24"
                role="img"
                viewBox="0 0 24 24"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  icon
                </title>
                <path
                  d="m19 12-2.9 2.9-.7-.8 2.1-2.1-2.1-2.1.7-.8L19 12zM7.9 9.1 5 12l2.9 2.9.7-.8L6.5 12l2.1-2.1-.7-.8zM22 12c0 5.5-4.5 10-10 10S2 17.5 2 12 6.5 2 12 2s10 4.5 10 10zm-1 0c0-5-4-9-9-9s-9 4-9 9 4 9 9 9 9-4 9-9zM9.6 16.5l1 .3 3.7-9.3-.9-.3-3.8 9.3z"
                />
              </svg>
            </span>
          </a>
        </div>
      </div>
      <div
        class="col-6 col-lg-4"
      >
        <div
          class="it-grid-item-wrapper"
        >
          <a
            href="#"
          >
            <div
              class="img-responsive-wrapper"
            >
              <div
                class="img-responsive"
              >
                <div
                  class="img-wrapper"
                >
                  <img
                    alt="Alternative Text"
                    src="https://via.placeholder.com/660x300/ebebeb/808080/?text=Immagine"
                    title="Image Title"
                  />
                </div>
              </div>
            </div>
            <span
              class="it-griditem-text-wrapper"
            >
              <span
                class="it-griditem-text"
              >
                Didascalia
              </span>
              <svg
                class="icon icon-sm"
                enable-background="new 0 0 24 24"
                role="img"
                viewBox="0 0 24 24"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  icon
                </title>
                <path
                  d="m19 12-2.9 2.9-.7-.8 2.1-2.1-2.1-2.1.7-.8L19 12zM7.9 9.1 5 12l2.9 2.9.7-.8L6.5 12l2.1-2.1-.7-.8zM22 12c0 5.5-4.5 10-10 10S2 17.5 2 12 6.5 2 12 2s10 4.5 10 10zm-1 0c0-5-4-9-9-9s-9 4-9 9 4 9 9 9 9-4 9-9zM9.6 16.5l1 .3 3.7-9.3-.9-.3-3.8 9.3z"
                />
              </svg>
            </span>
          </a>
        </div>
      </div>
      <div
        class="col-6 col-lg-4"
      >
        <div
          class="it-grid-item-wrapper"
        >
          <a
            href="#"
          >
            <div
              class="img-responsive-wrapper"
            >
              <div
                class="img-responsive"
              >
                <div
                  class="img-wrapper"
                >
                  <img
                    alt="Alternative Text"
                    src="https://via.placeholder.com/660x300/ebebeb/808080/?text=Immagine"
                    title="Image Title"
                  />
                </div>
              </div>
            </div>
            <span
              class="it-griditem-text-wrapper"
            >
              <span
                class="it-griditem-text"
              >
                Didascalia
              </span>
              <svg
                class="icon icon-sm"
                enable-background="new 0 0 24 24"
                role="img"
                viewBox="0 0 24 24"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  icon
                </title>
                <path
                  d="m19 12-2.9 2.9-.7-.8 2.1-2.1-2.1-2.1.7-.8L19 12zM7.9 9.1 5 12l2.9 2.9.7-.8L6.5 12l2.1-2.1-.7-.8zM22 12c0 5.5-4.5 10-10 10S2 17.5 2 12 6.5 2 12 2s10 4.5 10 10zm-1 0c0-5-4-9-9-9s-9 4-9 9 4 9 9 9 9-4 9-9zM9.6 16.5l1 .3 3.7-9.3-.9-.3-3.8 9.3z"
                />
              </svg>
            </span>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;
